tests/golden/type_errors/generic_explicit_argument_mismatch.cd
fun identity<T>(value: T): T { return value; }
print identity<number>("bad");
