tests/golden/type_errors/generic_explicit_argument_mismatch.err
Type error at 2:29: argument 1 expects number, got string
  print identity<number>("bad");
                              ^
